# PacketClassification

./: .gitignore  README.md  start_program.sh
data/: README.md  cafe-data.json  cafe-data.txt  dpi-data.json  home-data.json  home-data.txt  mixed-anomaly.json
packet-analysis/: README.md  location.py  main.py  model.py  requirements.txt
packet-analysis/tests/: test_location.py  test_main_model.py
packet-sniffer/: CMakeLists.txt  README.md
packet-sniffer/include/: packet_parser.hpp  packet_sniffer.hpp
packet-sniffer/src/: main.cpp  packet_parser.cpp  packet_sniffer.cpp
